--- a/templates/test_paste/test_change.html
+++ b/templates/test_paste/test_change.html
@@ -7,14 +7,21 @@
 <link rel="stylesheet" href="examples.css" type="text/css" media="screen" charset="utf-8" /> 
 </head>
 <body>
-<div style="width:600px;float:left;">
+<div style="width:600px;float:left;padding:10px;">
 	<div class="grid-header" style="width:100%">
-		<label>SlickGrid</label>
+		<label>XBRL Data Editor</label>
 	</div>
 	<div id="myGrid" style="width:100%;height:500px;"></div>
-	<div id="pager" style="width:100%;height:20px;"></div>
 </div>
-
+<div style="width:300px;float:left;padding:10px;">
+	<div class="control-header" style="width:100%">
+		<label>Controls</label>
+	</div>
+	<button id="add_column">Add Column</button>
+	<button id="add_row">Add Row</button><br>
+	<button id="del_column">Delete Selected Column</button>
+	<button id="del_row">Delete Selected Row</button>
+</div>
 <script src="../SlickGrid/lib/jquery-1.4.3.min.js"></script>
 <script src="../SlickGrid/lib/jquery-ui-1.8.5.custom.min.js"></script>
 <script src="../SlickGrid/lib/jquery.event.drag-2.0.min.js"></script>
@@ -22,11 +29,14 @@
 <script src="../SlickGrid/slick.grid.js"></script>
 <script src="../SlickGrid/slick.dataview.js"></script>
 <script src="../SlickGrid/slick.editors.js"></script>
-<script src="../SlickGrid/controls/slick.pager.js"></script>
 <script>
 	var grid;
 	var columns = [
-		{id:"col0", name:"A", field:"A"}
+		{
+			id:"desc",
+			name:"Description",
+			field:"description"
+		}
 	];
 	var options = {
 		enableCellNavigation: true,
@@ -34,10 +44,11 @@
 		editable: true
 	};
 	$(function() {
-		var data = [{'id': 'A_0', 'A': 0}];
+		var data = [
+			{id:0, description:'gasdfasdf'}
+		];
 		dataView = new Slick.Data.DataView();
 		grid = new Slick.Grid("#myGrid", dataView, columns, options);
-		var pager = new Slick.Controls.Pager(dataView, grid, $("#pager"));
 		dataView.onRowCountChanged.subscribe(function(e,args) {
 			grid.updateRowCount();
 			grid.render();
@@ -46,6 +57,31 @@
 		dataView.setItems(data);
 		dataView.endUpdate();
 		$("#myGrid").show();
+		
+		$("#add_column").click(function(e) {
+			var columns = grid.getColumns();
+			var id = columns.length + 1;
+			var desc = prompt("Column name");
+			if (desc === null) { return; }
+			columns.push({id:"col" + id, name:desc, field:desc});
+			grid.setColumns(columns);
+		});
+		
+		$("#add_row").click(function(e) {
+			var id = dataView.getLength() + 1;
+			dataView.addItem({id:id, description:'g'});
+		});
+		
+		$("#del_row").click(function e() {
+			var cell = grid.getActiveCell();
+			//cell['row'], cell['cell']
+			if (cell === null) { return; }
+			var item = dataView.getItem(cell['row']);
+			if (item === null) { return; }
+			dataView.deleteItem(item.id);
+			grid.invalidate();
+			grid.render();
+		});
 	})
 </script>
 </body>
