got a basic compiler working yay

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,10 @@
 {% load compiler %}
 
 {% compile %}
+<script type="text/coffeescript">
+alert 'Hello World :)'
+</script>
 <script type="text/javascript">
-alert('hello');
+alert('Javascript Hello');
 </script>
 {% endcompile %}
