--- a/templates/test_paste/test_change.html
+++ b/templates/test_paste/test_change.html
@@ -1,10 +1,11 @@
+{% load compiler %}
 <html>
 <head>
 <title>Testing Pasting</title>
-<link rel="stylesheet" href="../SlickGrid/slick.grid.css" type="text/css" media="screen" charset="utf-8" /> 
-<link rel="stylesheet" href="../SlickGrid/css/smoothness/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" charset="utf-8" />
-<link rel="stylesheet" href="../SlickGrid/controls/slick.pager.css" type="text/css" media="screen" charset="utf-8" /> 
-<link rel="stylesheet" href="examples.css" type="text/css" media="screen" charset="utf-8" /> 
+<link rel="stylesheet" href="/static/slickgrid/slick.grid.css" type="text/css" media="screen" charset="utf-8" /> 
+<link rel="stylesheet" href="/static/slickgrid/css/smoothness/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="/static/slickgrid/controls/slick.pager.css" type="text/css" media="screen" charset="utf-8" /> 
+<link rel="stylesheet" href="/static/css/examples.css" type="text/css" media="screen" charset="utf-8" /> 
 </head>
 <body>
 <div style="width:600px;float:left;padding:10px;">
@@ -26,13 +27,13 @@
 	  <textarea id="serialize_text" style="width:100%;height:450px;"></textarea>
 	</div>
 </div>
-<script src="../SlickGrid/lib/jquery-1.4.3.min.js"></script>
-<script src="../SlickGrid/lib/jquery-ui-1.8.5.custom.min.js"></script>
-<script src="../SlickGrid/lib/jquery.event.drag-2.0.min.js"></script>
-
-<script src="../SlickGrid/slick.core.js"></script>
-<script src="../SlickGrid/slick.grid.js"></script>
-<script src="../SlickGrid/slick.editors.js"></script>
+<script src="/static/slickgrid/lib/jquery-1.4.3.min.js"></script>
+<script src="/static/slickgrid/lib/jquery-ui-1.8.5.custom.min.js"></script>
+<script src="/static/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
+<script src="/static/slickgrid/slick.core.js"></script>
+<script src="/static/slickgrid/slick.grid.js"></script>
+<script src="/static/slickgrid/slick.editors.js"></script>
+{% compile %}
 <script type="text/coffeescript">
 data = []
 columns = []
@@ -89,6 +90,6 @@ $ ->
 		
 		$("#serialize_text").val JSON.stringify s_data
 </script>
-<script src="http://jashkenas.github.com/coffee-script/extras/coffee-script.js"></script>
+{% endcompile %}
 </body>
 </html>
