all the paths resolve!

--- a/templates/test_paste/test_change.html
+++ b/templates/test_paste/test_change.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <title>Testing Pasting</title>
-<link rel="stylesheet" href="/static/slickgrid/slick.grid.css" type="text/css" media="screen" charset="utf-8" /> 
-<link rel="stylesheet" href="/static/slickgrid/css/smoothness/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" charset="utf-8" />
-<link rel="stylesheet" href="/static/slickgrid/controls/slick.pager.css" type="text/css" media="screen" charset="utf-8" /> 
+<link rel="stylesheet" href="/static/SlickGrid/slick.grid.css" type="text/css" media="screen" charset="utf-8" /> 
+<link rel="stylesheet" href="/static/SlickGrid/css/smoothness/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="/static/css/examples.css" type="text/css" media="screen" charset="utf-8" /> 
 </head>
 <body>
@@ -27,12 +26,12 @@
 	  <textarea id="serialize_text" style="width:100%;height:450px;"></textarea>
 	</div>
 </div>
-<script src="/static/slickgrid/lib/jquery-1.4.3.min.js"></script>
-<script src="/static/slickgrid/lib/jquery-ui-1.8.5.custom.min.js"></script>
-<script src="/static/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
-<script src="/static/slickgrid/slick.core.js"></script>
-<script src="/static/slickgrid/slick.grid.js"></script>
-<script src="/static/slickgrid/slick.editors.js"></script>
+<script src="/static/SlickGrid/lib/jquery-1.4.3.min.js"></script>
+<script src="/static/SlickGrid/lib/jquery-ui-1.8.5.custom.min.js"></script>
+<script src="/static/SlickGrid/lib/jquery.event.drag-2.0.min.js"></script>
+<script src="/static/SlickGrid/slick.core.js"></script>
+<script src="/static/SlickGrid/slick.grid.js"></script>
+<script src="/static/SlickGrid/slick.editors.js"></script>
 {% compile %}
 <script type="text/coffeescript">
 data = []
