--- a/static/css/indicator.css
+++ b/static/css/indicator.css
@@ -8,7 +8,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 body {
 	margin: 0;
 	padding: 0;
-	background: #000000 url(images/img01.jpg) repeat left top;
+	background: #000000 url('/static/images/indicator/img01.jpg') repeat left top;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #4D4D4D;
@@ -61,7 +61,7 @@ a:hover {
 	height: 100px;
 	margin: 0 auto;
 	padding: 20px 0px 0px 30px;
-	background: url(images/img02.jpg) no-repeat left top;
+	background: url('/static/images/indicator/img02.jpg') no-repeat left top;
 }
 
 /* Logo */
@@ -185,16 +185,16 @@ a:hover {
 #page {
 	width: 1000px;
 	margin: 0 auto;
-	background: url(images/img04.jpg) repeat-y left top;
+	background: url('/static/images/indicator/img04.jpg') repeat-y left top;
 	padding: 0px;
 }
 
 #page-bgtop {
-	background: url(images/img03.jpg) no-repeat left top;
+	background: url('/static/images/indicator/img03.jpg') no-repeat left top;
 }
 
 #page-bgbtm {
-	background: url(images/img05.jpg) no-repeat left bottom;
+	background: url('/static/images/indicator/img05.jpg') no-repeat left bottom;
 }
 
 /* Content */
@@ -285,7 +285,7 @@ a:hover {
 	margin: 0px 30px;
 	padding: 0px 0px 0px 15px;
 	border-left: none;
-	background: url(images/img07.jpg) no-repeat left 12px;
+	background: url('/static/images/indicator/img07.jpg') no-repeat left 12px;
 }
 
 #sidebar li li span {
@@ -301,7 +301,7 @@ a:hover {
 	padding-top: 13px;
 	padding-left: 50px;
 	margin-bottom: 10px;
-	background: url(images/img06.jpg) no-repeat left 4px;
+	background: url('/static/images/indicator/img06.jpg') no-repeat left 4px;
 	letter-spacing: -.5px;
 	font-size: 1.8em;
 	color: #696969;
