removed some silly semi-colons out of the template

--- a/templates/test_change.html
+++ b/templates/test_change.html
@@ -79,8 +79,8 @@ $ ->
 		grid.invalidateRow cell['row']
 		data.splice cell['row'] 1
 		grid.setData data
-		grid.updateRowCount();
-		grid.render();
+		grid.updateRowCount()
+		grid.render()
 	
 	$("#serialize").click (e) ->
 		s_data =
